fixing alignment issues

--- a/style.css
+++ b/style.css
@@ -63,26 +63,24 @@ NAVBAR ↓
 
 nav {
     display: flex;
+    padding-top: 32px;
+    /* 
     justify-content: space-between;
     align-items: center;
-    padding-top: 32px;
     background: #fff;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
     padding: 1.5rem 2rem;
     position: sticky;
     top: 0;
     z-index: 1000;
+    */
 
 }
 
 .nav__row {
     display: flex;
     justify-content: space-between;
-    /* 
-    align-items: center;
-    max-width: 1280px;
-    margin: 0 auto;
-    */
+   
 }
 
 .nav__logo {
@@ -499,7 +497,6 @@ h1 {
     margin-top: 16px;
     padding-right: 128px;
     opacity: 0.5;
-    max-width: 100%;
 
 }
 
@@ -572,11 +569,10 @@ FEATURES ↓
 .feature__para {
     margin-top: 16px;
     font-size: 16px;
-    max-width: 300px;
+    max-width: calc(634px/3);
     color: rgb(124, 139, 161);
     line-height: 2;
     font-weight: 500;
-    text-align: center;
 
 }
 
@@ -599,11 +595,7 @@ FEATURES ↓
     display: flex;
     flex-direction: column;
     align-items: center;
-    /*
-    width: 100%;
-    max-width: 1200px;
-    margin: 0 auto;
-    */
+    
 }
 
 /* sections */
@@ -633,8 +625,6 @@ section {
 }
 
 .section__para {
-    text-align: center;
-    max-width: 576px;
     font-size: 18px;
     font-weight: 500;
     color: #7c8ba1;
@@ -1182,8 +1172,7 @@ TESTIMONIALS ↓
 }
 
 .testimonials__img {
-    width: 40%;
-    max-width: 400px;
+    width:41.667% ;
 }
 
 
@@ -1244,12 +1233,11 @@ TESTIMONIALS ↓
     line-height: 1.5;
 }
 
-.testimonial__img {
+.testimonial__img { 
     width: 80px;
     height: 80px;
     border-radius: 50%;
-    overflow-clip-margin: content-box;
-    overflow: clip;
+    margin-right: 24px;
 }
 
 .testimonial__role {
